# kilij

./: .gitignore  BogusControlFlow.cpp  BogusControlFlow.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ConstObfuscation.cpp  ConstObfuscation.h  CryptoUtils.cpp  CryptoUtils.h  Flattening.cpp  Flattening.h  IATObfuscation.cpp  IATObfuscation.h  IndirectBranch.cpp  IndirectBranch.h  LICENSE  MBAObfuscation.cpp  MBAObfuscation.h  Makefile  OpaquePredicates.cpp  OpaquePredicates.h  Plugin.cpp  README.md  SplitBasicBlock.cpp  SplitBasicBlock.h  StringObfuscation.cpp  StringObfuscation.h  Substitution.cpp  Substitution.h  Utils.cpp  Utils.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
VM/: VMBytecode.cpp  VMBytecode.h  VMConfig.h  VMEmitInterp.cpp  VMEmitInterp.h  VMEmitRegion.cpp  VMEmitRegion.h  VMEmitUtils.cpp  VMEmitUtils.h  VMEncode.cpp  VMEncode.h  VMIR.cpp  VMIR.h  VMIRBuilder.h  VMInterpreter.cpp  VMInterpreter.h  VMLowering.cpp  VMLowering.h  VMMath.h  VMPass.cpp  VMPass.h  VMRegionFormation.cpp  VMRegionFormation.h  VMRuntime.h
docs/: ARCHITECTURE.md  BUILDING.md  PASSES.md  TROUBLESHOOTING.md  VM.md
kilij-tests/: .gitignore  README.md  e2e_run.py  unit_fuzz_run.py  z3_test_predicates.py
kilij-tests/unit/: all_flags_integration.c  annotate_bcf.c  annotate_precedence.c  callbr_bcf.ll  eh_msvc_bcf.cpp  iat_skip_uefi.c  indirectbr_bcf.ll  musttail.ll  skip_attrs_bcf.ll  smoke_arith.c  smoke_fla.c  smoke_iat.c  smoke_indbr.c  smoke_indcall.c  smoke_split.c  smoke_str.c  str_include_trim.c  vm_hardrt_i686.c  vm_hardrt_uefi.c  vm_malloc_i686.c
release/: README.md  build_linux.sh  build_windows.ps1  package_linux.sh  package_windows.ps1
release/examples/: kilij_showcase.cpp
release/patches/: extract_symbols_analysiskey.patch  kilij_in_tree_clang.patch
release/quickstart/: build_showcase_exe.bat  run_clang_obf_ir.bat  run_clang_obf_ir.sh  run_opt_plugin.bat  run_opt_plugin.sh
